deployment/dok8s/base/gamelayer-webhook/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gamelayer-webhook
  labels:
    app.kubernetes.io/app: gamelayer-webhook
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/app: gamelayer-webhook
  template:
    metadata:
      labels:
        app.kubernetes.io/app: gamelayer-webhook
    spec:
      containers:
      - name: gamelayer-webhook
        image: freeverseio/gamelayer.webhook:dev
        imagePullPolicy: Always
      imagePullSecrets:
      - name: docker-secret
