deployment/dok8s/base/gamelayer-webhook/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: gamelayer-webhook
  labels:
    app.kubernetes.io/app: gamelayer-webhook
spec:
  ports:
  - port: 5000
  selector:
    app.kubernetes.io/app: gamelayer-webhook
