deployment/dok8s/base/gamelayer-webhook/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  namespace: freeverse
  name: cryptosoccer-webhook-ingress
  labels:
    webhook: enabled
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/auth-tls-verify-client: "on"
    nginx.ingress.kubernetes.io/auth-tls-verify-depth: "1"
    nginx.ingress.kubernetes.io/auth-tls-error-page: "http://www.mysite.com/error-cert.html"
    nginx.ingress.kubernetes.io/auth-tls-pass-certificate-to-upstream: "true"
    cert-manager.io/cluster-issuer: letsencrypt-freeverse
spec:
  tls:
  - hosts:
    - gamelayer.gorengine.com
    secretName: cryptosoccer-webhook-tls
  rules:
  - host: gamelayer.gorengine.com
    http:
      paths:
      - path: /
        backend:
          serviceName: gamelayer-webhook
          servicePort: 5000
